--- a/store/public/assets/loginSignUpStyle.css
+++ b/store/public/assets/loginSignUpStyle.css
@@ -1,7 +1,19 @@
 :root {
   --footerHeight: 92px;
 }
-/* 
+/*
+* Errors
+*/
+.error{
+    background-color: rgba(255,0,0,0.2);
+    padding: 5px 10px;
+}
+
+.is-invalid{
+    border: 1px solid rgba(255,0,0,0.2) !important;
+}
+
+/*
 * Back Buttom
 */
 .back-button {
@@ -17,11 +29,11 @@
   padding-top: 20px;
   text-decoration: none;
 }
-/* 
+/*
 * /Back Buttom
 */
 
-/* 
+/*
 * Login Page
 */
 .login-page {
@@ -143,7 +155,7 @@ form {
   margin-top: 44px;
   margin-bottom: 100px;
 }
-/* 
+/*
 * /Login Page
 */
 @media (max-width: 640px) {
